[tool.poetry]
name = "led-flash"
version = "0.1.0"
description = ""
authors = ["alfondehesa <alfondehesa@hotmail.com>"]
readme = "README.md"
packages = [{include = "led_flash"}]

[tool.poetry.dependencies]
python = "3.8.1"
numpy = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
